# sdl2-example

./: .gitignore  CMakeLists.txt  Star.cpp  Star.h  main.cpp
utils/: LTimer.cpp  LTimer.h  Timer.cpp  Timer.h
